# llm-key-requestor

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: admin-docker.yml  backend-docker.yml  frontend-docker.yml
admin/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
admin/src/: App.vue
admin/src/components/: AppHeader.vue  RequestDetailDialog.vue  RequestsTable.vue
admin/src/plugins/: vuetify.js
admin/src/services/: api.js  auth.js
admin/src/views/: DashboardView.vue  LoginView.vue
backend/: .dockerignore  Dockerfile  README.md  config.py  config.yaml  entrypoint.sh  main.py  pyproject.toml
backend/src/background/: __init__.py  queue_processor.py
backend/src/litellm/: manager.py
backend/src/mcp/: __init__.py  server.py  tools.py
backend/src/models/: key_request.py
backend/src/services/: approval_service.py  email_service.py  kubernetes_secret_service.py
backend/src/services/approval_plugins/: __init__.py  base.py  blacklist_plugin.py  email_plugin.py  http_plugin.py  humanintheloop_plugin.py  whitelist_plugin.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: HeroSection.vue  KeyRequestForm.vue  LanguageSwitcher.vue  ProcessTimeline.vue
frontend/src/composables/: useKeyRequest.js
frontend/src/locales/: de.js  en.js  es.js
frontend/src/plugins/: i18n.js  vuetify.js
frontend/src/services/: api.js
